Add functional tests for sample apps